--- a/components/StopStatusRow/StopStatusRow.module.scss
+++ b/components/StopStatusRow/StopStatusRow.module.scss
@@ -1,22 +1,26 @@
 .introduction {
   display: flex;
   justify-content: space-between;
-  padding: 20px 10px;
+  padding: 10px 5px;
+  margin: 5px 10px;
   background-color: #C0EFFE;
   border-radius: 10px;
+  min-width: 320px;
   & .intro_content {
     display: flex;
     align-items: center;
 
     & .intro_note {
       margin-left: 5px;
-      font-size: 1.3rem;
-      font-weight: 400;
+      font-size: 0.9rem;
+      font-weight: 700;
     }
   }
-  @media screen and (min-width: 1000px) {
+  @media screen and (min-width: 720px) {
     width: 60%;
     margin: 0 auto;
+    margin-bottom: 10px;
+ 
     .intro_note {
         font-size: 1.5rem;
         font-weight: 600;
